 * Changed width/height setting for overlay and iframe
 * Fixed IE7 positioning issue in quirks mode 
 * Added IE6 expression for elements - eliminating the need for an external stylesheet
 * Added dynamic centering of container as well as a position option for manual positioning
 * Added namespacing on events
 * Added window resize listener to resize dialog elements

== 1.1.1 ==
 * Date: Jan 15, 2008
 * Fixed overlay height and width detection in IE6
 * Added a modalData class attribute to dialog.data
 * Added check for dialog object in close()
   - Prevents JS errors if called when dialog is already closed
 * Updated tests and demos to jQuery 1.2.2 and SimpleModal 1.1.1
 * Updated test and demo css


== 1.1 ==
 * Date: Jan 3, 2008
 * Changed dialog.content to dialog.data
 * Changed remove() function to close()
   - Added a parameter to close() for external calls
 * Removed iframeId option
 * Removed cloneContent option
   - Completely changed the way SimpleModal handles the data (see below)
 * Added overlayCss and containerCss options to allow styling through SimpleModal
 * Added persist option to allow data to be "saved" across modal dialog calls
 * Changed the handling of data. SimpleModal will now keep track of whether the 
   data came from the DOM and if it did, when the dialog is closed, it will re-insert it.
   If persist is true, SimpleModal will re-insert the data in the state it was in when
   closed, otherwise, it will re-insert a cloned value of the data.
 * Added more CSS attributes to the overlay, container and iframe.
   - There were a number of CSS attributes that were necessary for the modal dialog
     to display correctly, so I moved them from the CSS, into SimpleModal.
 * Added a test page (http://www.ericmmartin.com/simplemodal-test/)


== 1.0.1 ==
 * Date: Oct 23, 2007
 * Removed containerTop function
   - Positioning is now handled through CSS
 * Added a demo page (http://www.ericmmartin.com/simplemodal/)
   - Added contact form demo